<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rural Explorer</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear">Clear all</string>
    <string name="action_add_dummies">Add dummies</string>
    <string name="action_center_location">Center to Location</string>
    <string name="action_rescue">Call Rescue</string>
    <string name="background_service_title">Rural Exploration</string>
    <string name="background_service_position">Location: %1$.5f, %2$.5f</string>
    <string name="background_service_position_na">Location: N/A</string>
    
    <string name="action_show_marker">Show markers</string>
    
    <string name="button_info">Info</string>
    <string name="info_device_icon">Device</string>
    <string name="name_anonymous">Anonymous</string>
    <string name="label_pressure">Pressure</string>
    <string name="label_temperature">Temperature</string>
    <string name="label_location">Location</string>
    <string name="label_acceleration">Acceleration</string>
    <string name="label_lastupdate">Last Update</string>
    <string name="label_distance">Distance</string>
    <string name="data_pressure_dummy">123</string>
    <string name="data_temperature_dummy">42°C</string>
    <string name="data_location_dummy">52.12345, 10.12345</string>
    <string name="data_acceleration_dummy">0.0, 0.0, 0.0</string>
    <string name="data_lastupdate_dummy">2014-01-01 10:12:11</string>
    <string name="data_distance_dummy">12 m</string>
    <string name="data_na">N/A</string>
    <string name="data_unit_degree_celsius">%1$.2f°C</string>
    <string name="data_unit_pressure">%1$.3f hPa</string>
    <string name="data_unit_latlng">%1$.5f, %2$.5f</string>
    <string name="data_unit_acceleration">%1$.5f, %2$.5f, %3$.5f</string>
    <string name="data_unit_date">%1$s</string>
    <string name="data_unit_distance">%1$.2f %2$s</string>
    
    <string name="rescue_title">Target Distance</string>
    <string name="data_unit_meters">%1$.1f m</string>

    <string name="notification_rescue_title">Rescue Request received</string>
    <string name="notification_rescue_invalid">Invalid</string>
    
    <string name="toast_no_location">No location available</string>
    <string name="toast_rescue_request_sent">Rescue request sent</string>
    
    <string name="dialog_ask_exit_title">Beaconing</string>
    <string name="dialog_ask_exit">Shall this device stay visible to other users?</string>
    <string name="dialog_ask_exit_yes">Yes.</string>
    <string name="dialog_ask_exit_no">No, stop beaconing.</string>
    
    <string name="dialog_rescue_title">Rescue request</string>
    <string name="dialog_rescue_text">You are going to sent a rescue request. Your position will be broadcasted to all users nearby you.</string>
    <string name="dialog_rescue_yes">Proceed</string>
    <string name="dialog_rescue_no">Abort</string>
</resources>
