<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/action_rescue"
        android:orderInCategory="5"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_rescue"
        android:title="@string/action_rescue"/>
    
    <item
        android:id="@+id/action_show_marker"
        android:orderInCategory="10"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_showmarker"
        android:title="@string/action_show_marker"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_add_dummies"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_add_dummies"/>
    
    <item
        android:id="@+id/action_clear"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/action_clear"/>

</menu>
