<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/data_padding">
    
    <TextView
        android:id="@+id/label_location"
        android:textSize="@dimen/data_title_size"
        android:textColor="@android:color/secondary_text_light"
        android:text="@string/label_location"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/text_location"
        android:textSize="@dimen/data_value_size"
        android:textColor="@android:color/primary_text_light"
        android:text="@string/data_location_dummy"
        android:layout_below="@id/label_location"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/label_distance"
        android:textSize="@dimen/data_title_size"
        android:textColor="@android:color/secondary_text_light"
        android:text="@string/label_distance"
        android:layout_below="@id/text_location"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:paddingTop="@dimen/data_item_padding" />
    
    <TextView
        android:id="@+id/text_distance"
        android:textSize="@dimen/data_value_size"
        android:textColor="@android:color/primary_text_light"
        android:text="@string/data_distance_dummy"
        android:layout_below="@id/label_distance"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content" />
    
</RelativeLayout>
