<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/data_padding">
    
    <TextView
        android:id="@+id/label_pressure"
        android:textSize="@dimen/data_title_size"
        android:textColor="@android:color/secondary_text_light"
        android:text="@string/label_pressure"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/text_pressure"
        android:textSize="@dimen/data_value_size"
        android:textColor="@android:color/primary_text_light"
        android:text="@string/data_pressure_dummy"
        android:layout_below="@id/label_pressure"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/label_temperature"
        android:textSize="@dimen/data_title_size"
        android:textColor="@android:color/secondary_text_light"
        android:text="@string/label_temperature"
        android:layout_below="@id/text_pressure"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:paddingTop="@dimen/data_item_padding" />
    
    <TextView
        android:id="@+id/text_temperature"
        android:textSize="@dimen/data_value_size"
        android:textColor="@android:color/primary_text_light"
        android:text="@string/data_temperature_dummy"
        android:layout_below="@id/label_temperature"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content" />

</RelativeLayout>
